tests/ui/fail/frame_mismatch.stderr
error[E0277]: cannot multiply `cardo::framed::SO3<Sensor, Body>` by `cardo::framed::SO3<Body, World>`
  --> tests/ui/fail/frame_mismatch.rs:11:17
   |
11 |     let _r = r1 * r2;
   |                 ^ no implementation for `cardo::framed::SO3<Sensor, Body> * cardo::framed::SO3<Body, World>`
   |
   = help: the trait `Mul<cardo::framed::SO3<Body, World>>` is not implemented for `cardo::framed::SO3<Sensor, Body>`
   = help: the following other types implement trait `Mul<Rhs>`:
             `cardo::framed::SO3<A, B, T>` implements `Mul<cardo::framed::SO3<C, A, T>>`
             `cardo::framed::SO3<A, B, T>` implements `Mul<cardo::framed::Vector3<A, T>>`
